[tool.poetry]
name = "hdr-reconstruction"
version = "0.1.0"
description = ""
authors = ["kutakieu <kutakieu22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.8.0.76"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
